--- a/css/add_style.css
+++ b/css/add_style.css
@@ -14,6 +14,12 @@ input[type="checkbox"][id^="mon"], input[type="checkbox"][id^="egg"], input[type
   display: none;
 }
 
+/*
+input[type="radio"][id^="form"]  {
+  display: none;
+}
+*/
+
 label[for^="mon"], label[for^="egg"], label[for^="raid"], label[for^="area"] {
   border: 1px solid grey;
   background-color: lightgrey;
@@ -29,6 +35,17 @@ label[for^="mon"], label[for^="egg"], label[for^="raid"], label[for^="area"] {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+label[for^="form"] {
+    padding: 2px 10px;
+    color: white;
+    background-color: darkred;
+    border-radius: 4px;
+}
+
+:checked+label[for^="form"] {
+  background-color: darkgreen;
 }
 
 label::before {
