--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,148 @@ code {
     background-color: #303030;
     border-radius: 4px;
 }
+
+/* Style for CheckBoxes Multi Selections */
+
+ul {
+  list-style-type: none;
+    padding: 0;
+}
+
+li {
+  display: inline-block;
+}
+
+input[type="checkbox"][id^="mon"], input[type="checkbox"][id^="egg"], input[type="checkbox"][id^="raid"], input[type="checkbox"][id^="area"]  {
+  display: none;
+}
+
+/*
+input[type="radio"][id^="form"]  {
+  display: none;
+}
+*/
+
+label[for^="mon"], label[for^="egg"], label[for^="raid"], label[for^="area"] {
+  border: 1px solid grey;
+  background-color: lightgrey;
+  border-radius: 5px;
+  padding: 5px;
+  display: block;
+  margin: 5px;
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+label[for^="form"] {
+    padding: 2px 10px;
+    color: white;
+    background-color: darkgrey;
+    border-radius: 4px;
+}
+
+:checked+label[for^="form"] {
+  background-color: darkgreen;
+}
+
+label::before {
+  background-color: white;
+  color: white;
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  border: 1px solid grey;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 28px;
+  transition-duration: 0.4s;
+  transform: scale(0);
+}
+
+label img {
+  height: 50px;
+  width: 50px;
+  transition-duration: 0.2s;
+  transform-origin: 50% 50%;
+}
+
+:checked+label {
+  border-color: #ddd;
+}
+
+:checked+label::before {
+  content: "✓";
+  background-color: grey;
+  transform: scale(1);
+}
+
+:checked+label img {
+  transform: scale(0.9);
+  box-shadow: 0 0 5px #333;
+  z-index: -1;
+}
+
+
+/* Style for Sticky Hader */
+
+.header {
+  background-color: #000000;
+  padding: 30px;
+  text-align: center;
+}
+
+#navbar {
+  overflow: hidden;
+  font-color: #FFFFFF;
+  background-color: #333;
+  padding-left:10;
+  padding-right:10;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#navbar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.content {
+  padding: 16px;
+}
+
+
+.sticky {
+    position:fixed;
+    top:0;
+    right:0;
+    background:#090909;
+    z-index:1000;
+}
+
+
+.sticky + .content {
+  padding-top: 60px;
+}
+
