--- a/css/style.css
+++ b/css/style.css
@@ -134,11 +134,16 @@ label {
   margin-bottom: 10px;
   text-align:center;
 }
+
 code {
     padding: 2px 10px;
     color: white;
     background-color: #303030;
     border-radius: 4px;
+}
+
+.clean {
+    background-color: darkgreen;
 }
 
 /* Style for CheckBoxes Multi Selections */
@@ -178,14 +183,14 @@ label[for^="mon"], label[for^="egg"], label[for^="raid"], label[for^="area"] {
   user-select: none;
 }
 
-label[for^="form"], label[for^="gender"] {
+label[for^="form"], label[for^="gender"], label[for^="clean"] {
     padding: 2px 10px;
     color: white;
     background-color: darkgrey;
     border-radius: 4px;
 }
 
-:checked+label[for^="form"] , :checked+label[for^="gender"] {
+:checked+label[for^="form"] , :checked+label[for^="gender"], :checked+label[for^="clean"] {
   background-color: darkgreen;
 }
 
