--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,33 @@ label {
   background-color: #f44336;
 }
 
+.button_enable {
+  width:100px;
+  border: none;
+  padding: 5px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 5px;
+  transition-duration: 0.4s;
+  background-color: #4CAF50;
+}
+
+.button_disable {
+  width:100px;
+  border: none;
+  padding: 5px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 5px;
+  transition-duration: 0.4s;
+  background-color: #f44336;
+}
+
+
 .button_other {
   border: none;
   padding: 10px 32px;
