Common Pkm unique index & add all fields to where clause

--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ label img {
   position: relative;
 }
 
-:checked+label[for^="area"]::before {
+:checked+label[for^="area"]::before, :checked+label[for^="mon"]::before {
   content: "✓";
   background-color: darkgrey;
   transform: scale(1);
