--- a/css/style.css
+++ b/css/style.css
@@ -1,384 +1,136 @@
-button {
-    width:180px;
-    text-align:center;
-    padding-bottom:3px;
-    padding-top:3px;
-    margin:5px;
-    border-radius: 10px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    vertical-align: top;
-}
-.button_small {
-    width:120px;
-}
-table {
-  border-collapse:separate;
-  border-spacing: 0 8px;
-}
-tr {
-    box-shadow: 0 0 10px darkgreen;
-    -webkit-border-radius: 5px!important;
-}
-td {
-    font-size: 10px;
-    padding: 5px;
-    text-align:center;
-}
-.content {
-    max-width: 500px;
-    margin: auto;
-    background: white;
-    padding: 10px;
-}
-p {
-  margin:0;
-  padding:0;
-}
-
-/* Style inputs, select elements and textareas */
-input[type=text], input[type=number], select, textarea{
-  padding: 2px;
-  margin: 2px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  resize: vertical;
-  text-align: center;
-}
-
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-  width:3em;
-}
-
-/* Style the label to display next to the inputs */
-label {
-  padding: 0;
-  display: inline-block;
-}
-
-.button_update {
-  border: none;
-  padding: 10px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 5px;
-  transition-duration: 0.4s;
-  background-color: #4CAF50;  
-} 
-
-.button_delete {
-  border: none;
-  padding: 10px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 5px;
-  transition-duration: 0.4s;
-  background-color: #f44336;
-}
-
-.button_enable {
-  width:100px;
-  border: none;
-  padding: 5px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 5px;
-  transition-duration: 0.4s;
-  background-color: #4CAF50;
-}
-
-.button_disable {
-  width:100px;
-  border: none;
-  padding: 5px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 5px;
-  transition-duration: 0.4s;
-  background-color: #f44336;
-}
-
-
-.button_other {
-  border: none;
-  padding: 10px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 5px;
-  transition-duration: 0.4s;
-}
-
-
-.button_update:hover {
-  background-color: #4CAF50; 
-  color: white;
-}
-
-.button_delete:hover {
-  background-color: #f44336;
-  color: white;
-}
-
-.button_other:hover {
-  background-color: darkgrey;
-  color: white;
-}
-
-
-.success_msg {
-  background-color: green;
-  color: white;
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  text-align:center;
-}
-
-.error_msg {
-  background-color: red;
-  color: white;
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  text-align:center;
-}
-
-code {
-    padding: 2px 10px;
-    color: white;
-    background-color: #303030;
-    border-radius: 4px;
-}
-
-.clean {
-    background-color: darkgreen;
-}
-
 /* Style for CheckBoxes Multi Selections */
 
-ul {
-  list-style-type: none;
-    padding: 0;
+.areasform ul {
+    list-style-type: none;
+    padding-inline-start: unset;
 }
 
-li {
-  display: inline-block;
+.areasform ul li {
+    display: inline-block;
 }
 
-input[type="checkbox"][id^="mon"], input[type="checkbox"][id^="egg"], input[type="checkbox"][id^="raid"], input[type="checkbox"][id^="area"], input[type="checkbox"][id^="item"]  {
-  display: none;
+.searchmons ul {
+    list-style-type: none;
+    padding-inline-start: unset;
+}
+
+.searchmons ul li {
+    display: inline-block;
+}
+
+.selectionList ul {
+    list-style-type: none;
+    padding-inline-start: unset;
+}
+
+.selectionList ul li {
+    display: inline-block;
+}
+
+input[type="checkbox"][id^="mon"],
+input[type="checkbox"][id^="egg"],
+input[type="checkbox"][id^="raid"],
+input[type="checkbox"][id^="area"],
+input[type="checkbox"][id^="item"] {
+    display: none;
 }
 
 input[type="radio"][id^="area"] {
-  display: none;
+    display: none;
 }
 
-label[for^="mon"], label[for^="egg"], label[for^="raid"], label[for^="area"], label[for^="item"] {
-  border: 1px solid grey;
-  background-color: lightgrey;
-  border-radius: 5px;
-  padding: 5px;
-  display: block;
-  margin: 5px;
-  cursor: pointer;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+label[for^="mon"],
+label[for^="egg"],
+label[for^="raid"],
+label[for^="area"],
+label[for^="item"] {
+    background-color: #858796;
+    color: #ffffff;
+    border-radius: 5px;
+    padding: 5px;
+    display: block;
+    margin: 5px;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    min-width: 90px;
 }
 
-label[for^="form"], label[for^="gender"], label[for^="clean"] {
-    padding: 2px 10px;
-    color: white;
-    background-color: darkgrey;
-    border-radius: 4px;
-}
 
-:checked+label[for^="form"] , :checked+label[for^="gender"], :checked+label[for^="clean"] {
-  background-color: darkgreen;
-}
+/* label[for^="mon"] {
+    background-color: #71ffce;
+    color: black;
+    border-radius: 5px;
+    padding: 5px;
+    display: block;
+    margin: 5px;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+} */
 
 label::before {
-  background-color: white;
-  color: white;
-  content: " ";
-  display: block;
-  border-radius: 50%;
-  border: 1px solid grey;
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  width: 25px;
-  height: 25px;
-  text-align: center;
-  line-height: 28px;
-  transition-duration: 0.4s;
-  transform: scale(0);
+    background-color: white;
+    color: white;
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    line-height: 28px;
+    transition-duration: 0.4s;
+    transform: scale(0);
 }
 
 label img {
-  height: 50px;
-  width: 50px;
-  transition-duration: 0.2s;
-  transform-origin: 50% 50%;
+    height: 50px;
+    width: 50px;
+    transition-duration: 0.2s;
+    transform-origin: 50% 50%;
 }
 
 :checked+label {
-  border-color: #ddd;
-  position: relative;
+    border-color: #ddd;
+    position: relative;
+    background-color: #5a5c69;
 }
 
-:checked+label[for^="area"]::before, :checked+label[for^="mon"]::before, :checked+label[for^="item"]::before {
-  content: "✓";
-  background-color: darkgrey;
-  transform: scale(1);
-  position: absolute;
+:checked+label[for^="mon"]::before,
+ :checked+label[for^="egg"]::before,
+ :checked+label[for^="raid"]::before,
+ :checked+label[for^="area"]::before,
+ :checked+label[for^="item"]::before {
+    content: "✓";
+    color: #ffffff;
+    background-color: #60da9a;
+    transform: scale(1);
+    position: absolute;
 }
 
 :checked+label img {
-  transform: scale(0.9);
-  box-shadow: 0 0 5px #333;
-  z-index: -1;
+    transform: scale(0.9);
+    /* box-shadow: 0 0 5px #333; */
+    z-index: -1;
 }
 
-
-/* Style for Sticky Hader */
-
-.header {
-  background-color: #333;
-  padding: 30px;
-  text-align: center;
+.cardlist {
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
 }
 
-#navbar {
-  overflow: hidden;
-  font-color: white;
-  background-color: #333;
-  padding-left:10;
-  padding-right:10;
+.list-group-item {
+    padding: 0.2rem 0.3rem;
+    font-size: 13px;
 }
-
-#navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-#navbar a:hover {
-  background-color: #333;
-  color: black;
-}
-
-#navbar a.active {
-  background-color: #333;
-  color: white;
-}
-
-.content {
-  padding: 16px;
-}
-
-
-.sticky {
-    position:fixed;
-    top:0;
-    right:0;
-    background:#333;
-    z-index:1000;
-}
-
-
-.sticky + .content {
-  padding-top: 60px;
-}
-
-.reddot {
-  height: 15px;
-  width: 15px;
-  margin: 3px;
-  background-color: red;
-  border-radius: 50%;
-  display: inline-block;
-}
-
-.greendot {
-  height: 15px;
-  width: 15px;
-  margin: 3px;
-  background-color: green;
-  border-radius: 50%;
-  display: inline-block;
-}
-
-/* Tooltip container */
-.tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
- 
-/* Tooltip position */
-  position: absolute;
-  z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-}
-
-/* Vertical Alignement */
-.img_div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    min-height: 60px;
-    width: 60px;
-}
-
-/* Transparent Button */
-
-.button_switch {
-   background-color: Transparent;
-   border: none;
-   cursor:pointer;
-   width: 60;
-}
-
