Add Mega Energy Rewards

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ input[type="checkbox"][id^="egg"],
 input[type="checkbox"][id^="raid"],
 input[type="checkbox"][id^="area"],
 input[type="checkbox"][id^="target"],
+input[type="checkbox"][id^="energy"],
 input[type="checkbox"][id^="item"] {
     display: none;
 }
@@ -45,6 +46,7 @@ label[for^="mon"],
 label[for^="egg"],
 label[for^="raid"],
 label[for^="area"],
+label[for^="energy"],
 label[for^="item"] {
     background-color: #858796;
     color: #ffffff;
@@ -121,6 +123,7 @@ label img {
 :checked+label[for^="egg"], 
 :checked+label[for^="raid"], 
 :checked+label[for^="area"], 
+:checked+label[for^="energy"], 
 :checked+label[for^="item"] {
     border-color: #ddd;
     position: relative;
@@ -138,6 +141,7 @@ label img {
  :checked+label[for^="raid"]::before,
  :checked+label[for^="area"]::before,
  :checked+label[for^="target"]::before,
+ :checked+label[for^="energy"]::before,
  :checked+label[for^="item"]::before {
     content: "✓";
     color: #ffffff;
