Add Lure Support

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ input[type="checkbox"][id^="profile"],
 input[type="checkbox"][id^="target"],
 input[type="checkbox"][id^="energy"],
 input[type="checkbox"][id^="grunt"],
+input[type="checkbox"][id^="lure"],
 input[type="checkbox"][id^="item"] {
     display: none;
 }
@@ -53,6 +54,7 @@ label[for^="area"],
 label[for^="profile"],
 label[for^="energy"],
 label[for^="grunt"],
+label[for^="lure"],
 label[for^="item"] {
     background-color: #858796;
     color: #ffffff;
@@ -132,6 +134,7 @@ label img {
 :checked+label[for^="profile"], 
 :checked+label[for^="energy"], 
 :checked+label[for^="grunt"], 
+:checked+label[for^="lure"], 
 :checked+label[for^="item"] {
     border-color: #ddd;
     position: relative;
@@ -152,6 +155,7 @@ label img {
  :checked+label[for^="target"]::before,
  :checked+label[for^="energy"]::before,
  :checked+label[for^="grunt"]::before,
+ :checked+label[for^="lure"]::before,
  :checked+label[for^="item"]::before {
     content: "✓";
     color: #ffffff;
