--- a/css/custom-bootstrap.css
+++ b/css/custom-bootstrap.css
@@ -6808,6 +6808,10 @@ button.bg-light:focus {
     background-color: #000000 !important;
 }
 
+.bg-darkgrey {
+    background-color: dimgrey !important;
+}
+
 a.bg-dark:hover,
 a.bg-dark:focus,
 button.bg-dark:hover,
