Add Support for Candy

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ input[type="checkbox"][id^="area"],
 input[type="checkbox"][id^="profile"],
 input[type="checkbox"][id^="target"],
 input[type="checkbox"][id^="energy"],
+input[type="checkbox"][id^="candy"],
 input[type="checkbox"][id^="grunt"],
 input[type="checkbox"][id^="lure"],
 input[type="checkbox"][id^="nest"],
@@ -55,6 +56,7 @@ label[for^="raid"],
 label[for^="area"],
 label[for^="profile"],
 label[for^="energy"],
+label[for^="candy"],
 label[for^="grunt"],
 label[for^="lure"],
 label[for^="nest"],
@@ -151,6 +153,7 @@ label img {
 :checked+label[for^="area"], 
 :checked+label[for^="profile"], 
 :checked+label[for^="energy"], 
+:checked+label[for^="candy"], 
 :checked+label[for^="grunt"], 
 :checked+label[for^="lure"], 
 :checked+label[for^="nest"], 
@@ -179,6 +182,7 @@ label img {
  :checked+label[for^="profile"]::before,
  :checked+label[for^="target"]::before,
  :checked+label[for^="energy"]::before,
+ :checked+label[for^="candy"]::before,
  :checked+label[for^="grunt"]::before,
  :checked+label[for^="lure"]::before,
  :checked+label[for^="nest"]::before,
