--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ input[type="checkbox"][id^="energy"],
 input[type="checkbox"][id^="candy"],
 input[type="checkbox"][id^="grunt"],
 input[type="checkbox"][id^="lure"],
+input[type="checkbox"][id^="gym"],
 input[type="checkbox"][id^="nest"],
 input[type="checkbox"][id^="language"],
 input[type="checkbox"][id^="item"] {
@@ -59,6 +60,7 @@ label[for^="energy"],
 label[for^="candy"],
 label[for^="grunt"],
 label[for^="lure"],
+label[for^="gym"],
 label[for^="nest"],
 label[for^="item"] {
     background-color: #858796;
@@ -156,6 +158,7 @@ label img {
 :checked+label[for^="candy"], 
 :checked+label[for^="grunt"], 
 :checked+label[for^="lure"], 
+:checked+label[for^="gym"], 
 :checked+label[for^="nest"], 
 :checked+label[for^="item"] {
     border-color: #ddd;
@@ -185,6 +188,7 @@ label img {
  :checked+label[for^="candy"]::before,
  :checked+label[for^="grunt"]::before,
  :checked+label[for^="lure"]::before,
+ :checked+label[for^="gym"]::before,
  :checked+label[for^="nest"]::before,
  :checked+label[for^="item"]::before {
     content: "✓";
@@ -225,3 +229,20 @@ label img {
     padding-right:15px; 
     border-radius: 5px;
 }
+
+.border-top-Harmony {
+    border-top: 0.25rem solid #858796 !important;
+}
+
+.border-top-Valor {
+    border-top: 0.25rem solid #e74a3b !important;
+}
+
+.border-top-Instinct {
+    border-top: 0.25rem solid #f6c23e !important;
+}
+
+.border-top-Mystic {
+    border-top: 0.25rem solid #4e73df !important;
+}
+
