Set Height and allow Wraping

--- a/css/custom-bootstrap.css
+++ b/css/custom-bootstrap.css
@@ -5115,6 +5115,19 @@ input[type="button"].btn-block {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.badge-wrap {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    vertical-align: baseline;
+    border-radius: 0.35rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+
 @media (prefers-reduced-motion: reduce) {
     .badge {
         transition: none;
