Add Level 9 Eggs/Raids

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Style for CheckBoxes Multi Selections */
+eck/* Style for CheckBoxes Multi Selections */
 
 .areasform ul {
     list-style-type: none;
